--- a/css/home.css
+++ b/css/home.css
@@ -117,6 +117,11 @@ body {
 .sticky {
     position: -webkit-sticky !important;
     position: sticky !important;
+    top: 110px;
+}
+.header-sticky {
+    position: -webkit-sticky !important;
+    position: sticky !important;
     top: 0;
 }
 .hover-scale {
@@ -133,4 +138,9 @@ body {
     -moz-transform: scale(1.1);
     -ms-transform: scale(1.1);
     -o-transform: scale(1.1);
+}
+@media (min-width: 1024px) {
+    .site-header {
+        padding: 0 20px;
+    }
 }
